docs(swagger): auth docs
